--- a/package.json
+++ b/package.json
@@ -1,35 +1,34 @@
 {
   "name": "farcaster-registration",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/themes": "^2.0.0",
+    "@ensdomains/thorin": "^0.6.44",
     "@rainbow-me/rainbowkit": "^1.1.1",
-    "buffer": "^6.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "viem": "^1.16.4",
+    "next": "13.5.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-transition-state": "1.1.5",
+    "styled-components": "^6.0.9",
+    "viem": "^1.16.5",
     "wagmi": "^1.4.3"
   },
   "devDependencies": {
-    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react-swc": "^3.3.2",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/styled-components": "^5.1.28",
+    "autoprefixer": "^10",
+    "postcss": "^8",
+    "prettier": "^3.0.3",
+    "tailwindcss": "^3",
+    "typescript": "^5"
   }
 }
