--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-qr-code": "^2.0.12",
     "react-transition-state": "1.1.5",
     "styled-components": "^6.0.9",
     "viem": "^1.16.5",
