--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@rainbow-me/rainbowkit": "^1.1.1",
     "@vercel/kv": "^0.2.3",
     "next": "13.5.4",
+    "next-plausible": "^3.11.2",
     "react": "^18",
     "react-dom": "^18",
     "react-qr-code": "^2.0.12",
